<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

  <EditText
      android:id="@+id/email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="96dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="40dp"
      android:hint="@string/prompt_email"
      android:inputType="textEmailAddress"
      android:selectAllOnFocus="true"
      app:layout_constraintBottom_toTopOf="@+id/pseudo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/pseudo"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="168dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="40dp"
      android:hint="Pseudo"
      android:inputType="text"
      android:selectAllOnFocus="true"
      app:layout_constraintBottom_toTopOf="@+id/password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="244dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="64dp"
      android:hint="@string/prompt_password"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"
      app:layout_constraintBottom_toTopOf="@+id/birthdate"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.48"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/birthdate"
      android:layout_width="0dp"
      android:layout_height="45dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="360dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="64dp"
      android:hint="Birthdate"
      android:inputType="date"
      android:selectAllOnFocus="true"
      app:layout_constraintBottom_toTopOf="@+id/login"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.36" />

  <Button
      android:id="@+id/login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="161dp"
      android:layout_marginLeft="161dp"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="162dp"
      android:layout_marginRight="162dp"
      android:layout_marginBottom="282dp"
      android:text="Register"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/birthdate"
      app:layout_constraintVertical_bias="1.0" />

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar2"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:layout_marginBottom="675dp"
      android:background="?attr/colorPrimary"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:popupTheme="@style/AppTheme.PopupOverlay" />
</android.support.constraint.ConstraintLayout>